prevent zooming on textbox input on mobile

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -736,6 +736,6 @@ input:checked + .slider {
     width: 0px !important;
 }
 
-input {
+input, textarea {
     font-size: 16px !important;
 }
